--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,10 @@ html, body {
 	padding: 0;
 }
 
+.fix{
+	overflow: hidden!important;
+}
+
 body{
 	background: linear-gradient(to top right, #bc6b98, #7e79b4) no-repeat;
 	font: normal 16px 'robotoregular';
@@ -145,4 +149,30 @@ h2 span{
 .partners-list li a img{
 	width: 100%;
 	vertical-align: bottom;
+}
+
+#overlay{
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	background: rgba(0,0,0,.95);
+	z-index: 100;
+}
+
+.popup-msg{
+	position: relative;
+	width: 50%;
+	padding: 2% 3%;
+	text-align: center;
+	font-size: 2em;
+	font-family: 'robotothin';
+	color: #fff;
+	text-transform: uppercase;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
 }
